# percona-xtrabackup

./: .bzrignore  .gitignore  .gitmodules  .travis.yml  BUILD.XtraBackup.txt  BUILD.txt  CMakeLists.txt  LICENSE  Makefile  README  README.md  VERSION  XB_VERSION  azure-pipelines.yml  buildtree.sh  code-of-conduct.md  config.h.cmake  configure.cmake  dbqp.py  docker-image.yml  dockerfile  fix_innodb_for_backup.patch  fix_innodb_for_backup51.patch  fix_innodb_for_backup55.patch  fix_innodb_for_backup_5.1_plugin.patch  fix_innodb_for_backup_5.1_plugin_1.0.7.patch  fix_innodb_for_backup_percona-server-11.patch  fix_innodb_for_backup_percona-server.patch  fix_innodb_for_backup_plugin.patch  fix_innodb_for_backup_xtradb.patch  innobackup-1.5.1  innobackup-1.5.1.patch  innobackupex  innobackupex-1.5.1  innobackupex.pl  kewpie.py  mysql-abi-check.patch  tar.patch  tar4ibd_libtar-1.2.11.patch  xb_regex.h  (+3 more)
components/keyrings/keyring_vault/: CMakeLists.txt  component_callbacks.cc  keyring_vault.cc  keyring_vault.h
components/keyrings/keyring_vault/backend/: backend.cc  backend.h  i_vault_curl.h  vault_base64.cc  vault_base64.h  vault_curl.cc  vault_curl.h  vault_keys_container.cc  vault_keys_container.h  vault_parser_composer.cc  vault_parser_composer.h
components/keyrings/keyring_vault/config/: config.cc  config.h
components/keyrings/keyring_vault/service_implementation/: keyring_encryption_service_definition.cc  keyring_generator_service_definition.cc  keyring_keys_metadata_iterator_service_definition.cc  keyring_load_service_definition.cc  keyring_metadata_query_service_definition.cc  keyring_reader_service_definition.cc  keyring_writer_service_definition.cc
extra/: CMakeLists.txt
extra/boost/: README
extra/boost/boost_1_84_0/boost/: io_fwd.hpp
extra/boost/boost_1_84_0/boost/random/: inversive_congruential.hpp  subtract_with_carry.hpp
extra/boost/boost_1_85_0/boost/uuid/: uuid_serialize.hpp
extra/zstd/: CMakeLists.txt
plugin/keyring_vault/: CMakeLists.txt  README  i_vault_curl.h  i_vault_io.h  i_vault_parser.h  i_vault_parser_composer.h  keyring_vault.version  vault_base64.cc  vault_base64.h  vault_credentials.cc  vault_credentials.h  vault_credentials_parser.cc  vault_credentials_parser.h  vault_curl.cc  vault_curl.h  vault_io.cc  vault_io.h  vault_key.cc  vault_key.h  vault_key_serializer.h  vault_keyring.cc  vault_keys_container.cc  vault_keys_container.h  vault_keys_list.cc  vault_keys_list.h  vault_parser.cc  vault_parser.h  vault_parser_composer.cc  vault_parser_composer.h
plugin/keyring_vault/keyring_vault-test/: CMakeLists.txt  keyring_vault-test.cc  vault_keys_container_ex.h
plugin/keyring_vault/tests/mtr/: generate_conf_file.inc  generate_default_conf_files.inc  innodb_online_alter_encryption-master.opt  innodb_online_alter_encryption.result  innodb_online_alter_encryption.test  innodb_row_log_encryption-master.opt  innodb_row_log_encryption.result  innodb_row_log_encryption.test  install_keyring_vault.result  install_keyring_vault.test  is_vault_server_up.inc  key_rotation_qa.result  key_rotation_qa.test  keyring_udf-master.opt  keyring_udf.result  keyring_udf.test  keyring_vault_config.result  keyring_vault_config.test  keyring_vault_config_qa-master.opt  keyring_vault_config_qa.result  keyring_vault_config_qa.test  keyring_vault_thd_wait.result  keyring_vault_thd_wait.test  keyring_vault_timeout.result  keyring_vault_timeout.test  mount_point_service.inc  plugin.defs  rpl_key_rotation-master.opt  rpl_key_rotation.result  rpl_key_rotation.test  table_encrypt_1.result  table_encrypt_1.test  table_encrypt_2.result  table_encrypt_2.test  table_encrypt_3.result  table_encrypt_3.test  table_encrypt_4.result  table_encrypt_4.test  table_encrypt_5.result  table_encrypt_5.test  (+12 more)
storage/innobase/xtrabackup/: .bzrignore  .gitignore  CMakeLists.txt  COPYING  Makefile  innobackupex.pl  xbcloud_osenv.sh
storage/innobase/xtrabackup/doc/: .gitignore  Makefile  mkdocs-base.yml  mkdocs-pdf.yml  mkdocs-percona.yml  mkdocs.yml  netlify.toml  requirements.txt  xtrabackup.1
storage/innobase/xtrabackup/doc/docs/: faq.md  glossary.md  how-tos.md  how_xtrabackup_works.md  index.md  intro.md  known_issues.md  manual.md  release-notes.md  trademark-policy.md  version-check.md  xtrabackup-files.md
storage/innobase/xtrabackup/doc/source/: CMakeLists.txt  README.md  conf.py  contributing.md  faq.rst  glossary.rst  how-tos.rst  how_xtrabackup_works.rst  index.rst  installation.rst  intro.rst  known_issues.rst  manual.rst  release-notes.rst  trademark-policy.rst  version-check.rst  xtrabackup-files.rst
storage/innobase/xtrabackup/patches/: innodb51.patch  xtradb51.patch
storage/innobase/xtrabackup/src/: CMakeLists.txt  backup_copy.cc  backup_copy.h  backup_mysql.cc  backup_mysql.h  changed_page_bitmap.cc  changed_page_bitmap.h  changed_page_tracking.cc  changed_page_tracking.h  common.h  compact.cc  compact.h  config.h.cmake  datasink.c  datasink.cc  datasink.h  ddl_tracker.cc  ddl_tracker.h  ds_archive.c  ds_buffer.c  ds_buffer.cc  ds_buffer.h  ds_compress.c  ds_compress.cc  ds_compress_lz4.cc  ds_compress_lz4.h  ds_compress_zstd.cc  ds_compress_zstd.h  ds_decompress.cc  ds_decompress.h  ds_decompress_lz4.cc  ds_decompress_lz4.h  ds_decompress_zstd.cc  ds_decompress_zstd.h  ds_decrypt.c  ds_decrypt.cc  ds_decrypt.h  ds_encrypt.c  ds_encrypt.cc  ds_encrypt.h  (+72 more)
storage/innobase/xtrabackup/src/crc/: CMakeLists.txt  crc-intel-pclmul.c  crc-intel-pclmul.cc  crc-intel-pclmul.h  crc_glue.c  crc_glue.cc  crc_glue.h
storage/innobase/xtrabackup/src/jsmn/: CMakeLists.txt  (+1 more)
storage/innobase/xtrabackup/test/: CMakeLists.txt  asan.supp  bootstrap.sh  run.sh  subunit.sh  subunit2junitxml  subunit2junitxml_python3
storage/innobase/xtrabackup/utils/: build-binary.sh  build-dpkg.sh  build-rpm.sh  percona-xtrabackup-2.4_builder.sh  percona-xtrabackup-8.0_builder.sh  percona-xtrabackup.spec  pxb_builder.sh  test-build.sh  xtrabackup.spec
unittest/gunit/components/keyring_vault/: CMakeLists.txt  component_callbacks_mock.cc  vault_backend-t.cc  vault_config-t.cc
utilities/: CMakeLists.txt
(+2924 files in other folders)
